Replace the string key with a more compact one
Also removed related untranslated entries in various Localizable.strings

--- a/Interfaces/da.lproj/Localizable.strings
+++ b/Interfaces/da.lproj/Localizable.strings
@@ -668,7 +668,7 @@
 "Vienna cannot show the file title" = "Vienna kan ikke vise arkivtitlen";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "Vienna er nød til at opgradere dens database til den nyeste version. Dette tager omkring et minut. Vi underskylder for ulejligheden.";
+"Database upgrade explanation text" = "Vienna er nød til at opgradere dens database til den nyeste version. Dette tager omkring et minut. Vi underskylder for ulejligheden.";
 
 /* No comment provided by engineer. */
 "Yes" = "Ja";
