--- a/Interfaces/nl.lproj/Localizable.strings
+++ b/Interfaces/nl.lproj/Localizable.strings
@@ -593,7 +593,7 @@
 "Vienna cannot show the file title" = "Vienna kan het bestand niet tonen.";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "Vienna moet de database bijwerken naar de laatste versie. Dit kan enige tijd duren. Sorry voor het ongemak.";
+"Database upgrade explanation text" = "Vienna moet de database bijwerken naar de laatste versie. Dit kan enige tijd duren. Sorry voor het ongemak.";
 
 /* No comment provided by engineer. */
 "Yes" = "Ja";
