--- a/Interfaces/pt-BR.lproj/Localizable.strings
+++ b/Interfaces/pt-BR.lproj/Localizable.strings
@@ -569,7 +569,7 @@
 "Vienna cannot show the file title" = "Vienna não pode mostrar o arquivo.";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "O Vienna precisa atualizar seu banco de dados para a última versão.  Isto pode demorar um minuto ou dois.  Pedimos desculpas pelo inconveniente.";
+"Database upgrade explanation text" = "O Vienna precisa atualizar seu banco de dados para a última versão.  Isto pode demorar um minuto ou dois.  Pedimos desculpas pelo inconveniente.";
 
 /* No comment provided by engineer. */
 "Yes" = "Sim";
