--- a/Vienna Tests/es.lproj/Localizable.strings
+++ b/Vienna Tests/es.lproj/Localizable.strings
@@ -104,7 +104,7 @@
 "Upgrade Database" = "Actualizar base de datos";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "Vienna debe actualizar su base de datos a la última versión. Esto puede tardar un minuto más o menos. Lamentamos el inconveniente.";
+"Database upgrade explanation text" = "Vienna debe actualizar su base de datos a la última versión. Esto puede tardar un minuto más o menos. Lamentamos el inconveniente.";
 
 /* test for a string */
 "contains" = "contiene";
