--- a/Vienna Tests/fr.lproj/Localizable.strings
+++ b/Vienna Tests/fr.lproj/Localizable.strings
@@ -107,7 +107,7 @@
 "Upgrade Database" = "Mettre à jour la base de données";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "Vienna doit effectuer une mise à jour de sa base de données. Cela peut prendre une minute ou plus. Merci de votre compréhension.";
+"Database upgrade explanation text" = "Vienna doit effectuer une mise à jour de sa base de données. Cela peut prendre une minute ou plus. Merci de votre compréhension.";
 
 /* test for a string */
 "contains" = "contient";
