--- a/Vienna Tests/gl.lproj/Localizable.strings
+++ b/Vienna Tests/gl.lproj/Localizable.strings
@@ -104,7 +104,7 @@
 "Upgrade Database" = "Actualizar a base de datos";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "Vienna debe actualizar a súa base de datos á última versión. Isto pode tardar un minuto máis ou menos. Perdoa polo inconveniente.";
+"Database upgrade explanation text" = "Vienna debe actualizar a súa base de datos á última versión. Isto pode tardar un minuto máis ou menos. Perdoa polo inconveniente.";
 
 /* test for a string */
 "contains" = "contén";
