--- a/Vienna Tests/nl.lproj/Localizable.strings
+++ b/Vienna Tests/nl.lproj/Localizable.strings
@@ -98,7 +98,7 @@
 "Upgrade Database" = "Bijwerken database";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "Vienna moet de database bijwerken naar de laatste versie. Dit kan enige tijd duren. Sorry voor het ongemak.";
+"Database upgrade explanation text" = "Vienna moet de database bijwerken naar de laatste versie. Dit kan enige tijd duren. Sorry voor het ongemak.";
 
 /* test for a string */
 "contains" = "bevat";
