--- a/Vienna Tests/ru.lproj/Localizable.strings
+++ b/Vienna Tests/ru.lproj/Localizable.strings
@@ -104,7 +104,7 @@
 "Upgrade Database" = "Обновить базу данных";
 
 /* No comment provided by engineer. */
-"Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconveninece." = "Vienna необходимо обновить свою базу данных до последней версии. Это может занять минуту или около того. Приносим свои извинения за доставленные неудобства.";
+"Database upgrade explanation text" = "Vienna необходимо обновить свою базу данных до последней версии. Это может занять минуту или около того. Приносим свои извинения за доставленные неудобства.";
 
 /* test for a string */
 "contains" = "содержит";
