--- a/Interfaces/nl.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/nl.lproj/GeneralPreferencesView.strings
@@ -34,6 +34,9 @@
 /* Class = "NSButtonCell"; title = "Show in menu bar"; ObjectID = "JN6-lj-bQ1"; */
 "JN6-lj-bQ1.title" = "Toon in menubalk";
 
+/* Class = "NSButtonCell"; title = "Search for latest Beta versions"; ObjectID = "OID-qF-Pp0"; */
+"OID-qF-Pp0.title" = "Zoek naar bèta-updates";
+
 /* Class = "NSButtonCell"; title = "Open links in external browser"; ObjectID = "YoM-Gv-hXn"; */
 "YoM-Gv-hXn.title" = "Open koppeling in externe browser";
 
