--- a/Interfaces/de.lproj/MainWindowController.strings
+++ b/Interfaces/de.lproj/MainWindowController.strings
@@ -49,17 +49,32 @@
 /* Class = "NSTextFieldCell"; title = "Filter by:"; ObjectID = "1377"; */
 "1377.title" = "Filter nach:";
 
+/* Class = "NSTextFieldCell"; title = "Current Filter"; ObjectID = "1404"; */
+"1404.title" = "Aktueller Filter";
+
 /* Class = "NSToolbarItem"; label = "Add"; ObjectID = "CPA-Ha-aj1"; */
 "CPA-Ha-aj1.label" = "Hinzufügen";
 
 /* Class = "NSToolbarItem"; paletteLabel = "Add"; ObjectID = "CPA-Ha-aj1"; */
 "CPA-Ha-aj1.paletteLabel" = "Hinzufügen";
 
+/* Class = "NSToolbarItem"; toolTip = "Subscribe to a feed or add a folder or smart folder."; ObjectID = "CPA-Ha-aj1"; */
+"CPA-Ha-aj1.toolTip" = "Einen Feed, Ordner oder intelligenten Feed hinzufügen.";
+
+/* Class = "NSToolbarItem"; label = "All Read"; ObjectID = "Gyz-dq-ewv"; */
+"Gyz-dq-ewv.label" = "Alle gelesen";
+
+/* Class = "NSToolbarItem"; paletteLabel = "Mark All Items as Read"; ObjectID = "Gyz-dq-ewv"; */
+"Gyz-dq-ewv.paletteLabel" = "Alle Einträge als gelesen markieren";
+
+/* Class = "NSToolbarItem"; toolTip = "Mark all items as read"; ObjectID = "Gyz-dq-ewv"; */
+"Gyz-dq-ewv.toolTip" = "Alle Einträge als gelesen markieren";
+
 /* Class = "NSMenuItem"; title = "Refresh Selected Subscriptions"; ObjectID = "Hs0-hu-A2g"; */
 "Hs0-hu-A2g.title" = "Ausgewähltes Abonnement aktualisieren";
 
 /* Class = "NSMenuItem"; title = "All Articles"; ObjectID = "JT2-Q7-gRj"; */
-"JT2-Q7-gRj.title" = "Alle Artikel";
+"JT2-Q7-gRj.title" = "Alle Einträge";
 
 /* Class = "NSMenuItem"; title = "More Styles…"; ObjectID = "MaO-r1-tcm"; */
 "MaO-r1-tcm.title" = "Mehr Stile…";
@@ -170,7 +185,7 @@
 "vOQ-xo-w8E.title" = "Bearbeiten…";
 
 /* Class = "NSMenuItem"; title = "Mark All Articles as Read"; ObjectID = "xNW-zC-IMZ"; */
-"xNW-zC-IMZ.title" = "Alle Artikel als gelesen markieren";
+"xNW-zC-IMZ.title" = "Alle Einträge als gelesen markieren";
 
 /* Class = "NSMenuItem"; title = "Last Refresh"; ObjectID = "xVH-W7-Br4"; */
 "xVH-W7-Br4.title" = "Letzte Aktualisierung";
