--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,11 @@ most recent build should be at the top of this file.
 
 Thanks!
 
+3.1.15
+------
+- Fix article list not scrolling to top when selecting a folder
+- Fix 'Skip folder' to not select the first article of the following folder if in the current folder, no article is selected
+
 3.1.14
 ------
 - Fix article pane not updating on article deletion from the 'Unread Articles' folder
