--- a/Interfaces/sv.lproj/Localizable.strings
+++ b/Interfaces/sv.lproj/Localizable.strings
@@ -4,6 +4,9 @@
 /* Progress in bytes, e.g. 1 KB of 1 MB */
 "%@ of %@" = "%1$@ av %2$@";
 
+/* Number of bytes received, e.g. 1 MB received */
+"%@ received" = "%@ mottaget";
+
 /* {existing authors},{new author name} */
 "%@, %@" = "%1$@, %2$@";
 
@@ -142,6 +145,9 @@
 "Delete Article" = "Radera artikel";
 
 /* No comment provided by engineer. */
+"Delete Open Reader RSS feed" = "Radera Open Reader-flöde";
+
+/* No comment provided by engineer. */
 "Delete Open Reader RSS feed text" = "Unsubscribing from an Open Reader RSS feed will also remove your locally cached articles.";
 
 /* No comment provided by engineer. */
@@ -239,6 +245,9 @@
 
 /* No comment provided by engineer. */
 "Error parsing XML data in feed" = "Fel vid avläsning av XML-data i strömmen";
+
+/* No comment provided by engineer. */
+"Error retrieving RSS feed:" = "Fel vid mottagning av RSS-flöde:";
 
 /* No comment provided by engineer. */
 "Error: Feed not found!" = "Fel: Flöde hittades inte!";
